// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reject sets containing elements of the wrong type 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should reject values that are not sets 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "set",
    "path": [],
    "received": "array",
  },
]
`;
